manifest/ingress.yaml
# Manifest file for configuring Ingress to route traffic to the address book application
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: addressbook-ingress
  namespace: dev
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-west-2:339712828145:certificate/bf7327a4-c3ef-4bf9-8157-d31e9182a616
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 443}]'
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-port: "443"
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/healthcheck-path: /addressbook-1.0
    alb.ingress.kubernetes.io/success-codes: 200,302
    alb.ingress.kubernetes.io/load-balancer-name: addressbook-server-ip
    alb.ingress.kubernetes.io/target-group-attributes: deregistration_delay.timeout_seconds=30
spec:
  ingressClassName: alb
  # Route traffic based on hostname and path
  rules:
  - host: abook.teamaconsulting.com
    http:
      paths:
      - path: /addressbook-1.0
        pathType: Prefix
        backend:
          service:
            name: addressbook-service
            port:
              number: 8080
